--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,3 +5,7 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
+
+  .inner {
+    max-width: 75%;
+  }
