--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -198,7 +198,9 @@ pre {
  * Wrapper
  */
 .wrapper {
-  max-width: calc(#{$content-width} - (#{$spacing-unit}));
+    max-width: 55%;
+    // max-width: 1200px;
+    // max-width: calc(#{$content-width} - (#{$spacing-unit}));
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit / 2;
