added disqus, fixed max width

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -208,7 +208,8 @@ pre {
   @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
-    max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width: 55%;
+    // max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
   }
