--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -2,5 +2,9 @@
   Placeholder to allow defining custom head, in principle, you can add anything here, e.g. favicons:
 
   1. Head over to https://realfavicongenerator.net/ to add your own favicons.
-  2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
+  2. Customize default  in your source directory and insert the given code snippet.
 {% endcomment %}
+<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+
+
+
