--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
       <br />
-    {% comment %}{{ content }} {% comment %}
+    {% comment %}{{ content }} {% endcomment %}
     {% include anchor_headings.html html=content anchorBody="#" %}
   </div>
 
