--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,7 @@ layout: default
   <div class="post-content e-content" itemprop="articleBody">
       <br />
     {% comment %}{{ content }} {% endcomment %}
+    {% include toc.html html=content %}
     {% include anchor_headings.html html=content anchorBody="#" %}
   </div>
 
