--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: default
     </div>
   </header>
 
-  <div class="post-content e-content" itemprop="articleBody">
+  <div class="post-content e-content" itemprop="articleBody" style="padding-top: 15px;">
       <br />
     {% comment %}{{ content }}{% endcomment %}
     {% comment %}{% include toc.html html=content %}{% endcomment %}
