--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -8,3 +8,20 @@
 
 
 
+<meta property="og:title" content="{{ page.title }}">
+<meta property="og:url" content="{{ site.baseurl }}{{ page.url }}">
+<meta name="twitter:title" content="{{ page.title }} ">
+<meta name="twitter:site" content="@CuckooEXE">
+
+
+{%- if page.image -%}
+    <meta property="og:image" content="{{ site.baseurl }}/images/{{ page.image }}">
+    <meta name="twitter:image" content="{{ site.baseurl }}/images/{{ page.image }}">
+{%- endif -%}
+
+
+{%- if page.excerpt -%}
+    <meta property="og:description" content="{{ page.excerpt }}">
+    <meta name="twitter:description" content="{{ page.excerpt }}">
+    <meta name="twitter:card" content="{{ page.excerpt }}">
+{%- endif -%}
