--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,1 +1,2 @@
 <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+<link rel="stylesheet" href="{{ "/assets/css/native.css" | relative_url }}">
