--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,6 +41,22 @@ layout: default
     {% include anchor_headings.html html=content anchorBody="#" %}
   </div>
 
+  <script src="https://giscus.app/client.js"
+        data-repo="CuckooEXE/cuckooexe.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkzNjQ3MzE2OTQ="
+        data-category="General"
+        data-category-id="DIC_kwDOFb1dLs4CcT9F"
+        data-mapping="title"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+  </script>
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
