--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
 				<ul class="nav nav-pills">
                     <li class="nav-item"><a href="/" class="nav-link {% if page.url == '/' %}active{% endif %}" aria-current="page">Home</a></li>
                     <li class="nav-item"><a href="/about" class="nav-link {% if page.url == '/about' %}active{% endif %}">About</a></li>
-                    <li class="nav-item"><a href="/cves" class="nav-link {% if page.url == '/CVEs' %}active{% endif %}">CVEs</a></li>
+                    <li class="nav-item"><a href="/CVEs" class="nav-link {% if page.url == '/CVEs' %}active{% endif %}">CVEs</a></li>
                     <li class="nav-item"><a href="mailto:me@axel.io" class="nav-link">Contact</a></li>
 				</ul>
 			</header>
