Fix formatting in home and page layouts

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 <div class="pt-3 text-center rounded-3">
     <h1 class="text-body-emphasis pb-1">👋 Hey, I'm <span class="glitch"><span aria-hidden="true">Axel</span>Axel<span aria-hidden="true">Axel</span></span><span class="rainbow">.</span></h1>
     <p class="col-lg-8 mx-auto fs-5 text-muted pb-3">
-        I'm an Offensive Security Researcher, and I like to write about: my findings, journey learning new technologies, and random musings on tech.
+        I'm an Offensive Security Researcher, and I like to write about: my findings, my journey learning new technologies, and my random musings on tech.
     </p>
 	<span class="h6 px-3 position-relative"><a class="stretched-link" href="https://github.com/CuckooEXE"><i class="bi bi-github"></i></a> &nbsp; GitHub</span><div class="vr"></div>
 	<span class="h6 px-3 position-relative"><a class="stretched-link" href="https://www.linkedin.com/in/axelpersinger"><i class="bi bi-linkedin"></i></a> &nbsp; LinkedIn</span><div class="vr"></div>
