--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 
 	<span class="display-3">{{ page.title | escape }}</span>
 
-	<div class="post-content">
+	<div class="post-content pt-3">
 		{{ content }}
 	</div>
 
