--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,7 @@
 		<!-- !Light/Dark Theme -->
 
 		<!-- Main Body -->
-		<div class="container bg-body pb-5 mb-5">
+		<div class="container bg-body mb-5">
 			<!-- Header -->
 			<header class="d-flex justify-content-center py-5">
 				<ul class="nav nav-pills">
