--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: default
 <div class="container">
 	<div class="row">
 		<div class="col-md-1"></div>
-		<div class="col-md-9 mx-5">
+		<div class="col-md-9 mr-5">
 			{%- if posts.size > 0 -%}	  
 				<ul class="post-list list-group list-group-flush borderless">
 				{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
