--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
 }
+.centered {
+    text-align: center;
+}
 .bi {
 vertical-align: -.125em;
 fill: currentColor;
